# AI-Mailbox

./: .dockerignore  .gitignore  AGENTS.md  README.md  REVIEW.md  docker-compose.yml  fetch-model.sh
.claude/: CLAUDE.md
.github/: DEPLOY.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy.yml
apps/api/: pyproject.toml
apps/api/ai_mailbox_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0002_classification_message_unique.py  0003_encrypt_provider_tokens.py  0004_triage_indexes.py  0005_search_trgm_indexes.py  0006_thread_done_at.py  0007_gmail_history_cursor.py  0008_mail_sync_run.py  0009_recency_indexes.py  0010_token_version.py  0011_scheduled_sync.py  0012_email_password_auth.py  0013_multi_gmail_accounts.py  0014_account_recency_index.py  0015_outlook_columns.py
apps/api/app/: deps.py  main.py
apps/api/app/core/: config.py  crypto.py  errors.py  logging.py  ratelimit.py  security.py
apps/api/app/db/: base.py  types.py
apps/api/app/db/models/: __init__.py  auth_token.py  classification.py  message.py  provider.py  sync_run.py  thread.py  user.py
apps/api/app/db/schemas/: analytics.py  auth.py  common.py  health.py  mailbox.py
apps/api/app/routes/: analytics.py  auth.py  auth_google.py  auth_google_dev.py  auth_microsoft.py  auth_password.py  health.py  mailbox.py
apps/api/app/services/: auth_tokens.py  mailer.py  sync_runs.py
apps/api/app/services/ingest/: gmail_client.py  gmail_ingest.py  normalizer.py  outlook_client.py  outlook_ingest.py
apps/api/app/services/nlp/: backfill.py  classifier.py  local_model.py  persistence.py
apps/api/app/workers/: celery_app.py  tasks_email.py  tasks_ingest.py  tasks_nlp.py
apps/api/tests/: conftest.py  test_analytics.py  test_auth.py  test_auth_microsoft.py  test_auth_password.py  test_auth_providers_outlook.py  test_auth_tokens.py  test_classifier.py  test_config.py  test_cors.py  test_crypto.py  test_errors.py  test_forwarded_ip.py  test_gmail_history_sync.py  test_health.py  test_ingest_queue.py  test_logging.py  test_mailbox.py  test_mailbox_pagination.py  test_normalizer.py  test_oauth_google.py  test_outlook_client.py  test_outlook_ingest.py  test_outlook_normalizer.py  test_ratelimit.py  test_response_models.py  test_scheduled_sync.py  test_security_passwords.py  test_smoke.py  test_sync_dispatch.py  test_sync_health.py  test_sync_runs.py  test_task_status.py  test_tasks_email.py  test_tasks_ingest.py  test_tasks_nlp.py  test_token_revocation.py  test_validation.py
apps/web/: .env.example  README.md  design-prompts.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/auth/: AuthContext.tsx  context.ts
apps/web/src/components/: ProtectedRoute.tsx
apps/web/src/components/console/: BucketSidebar.tsx  CommandPalette.tsx  ConsoleLayout.tsx  GoogleMark.tsx  LayoutPicker.tsx  LoginScreen.tsx  Mark.tsx  MicrosoftMark.tsx  NarrowShell.tsx  OnboardingTour.tsx  Popover.test.tsx  TopBar.tsx  (+6 more)
apps/web/src/lib/: api.test.ts  api.ts  email-html.test.ts  email-html.ts  labels.ts  layout.test.ts  layout.ts  live-search.test.ts  live-search.ts  mock.test.ts  mock.ts  oauthBinding.ts  seen.test.ts  seen.ts  sender.test.ts  sender.ts  theme.ts  time.test.ts  time.ts  tour-steps.ts  types.ts  use-auto-sync.ts  use-hotkeys.ts  use-onboarding-tour.render.test.tsx  use-onboarding-tour.test.ts  use-onboarding-tour.ts  use-viewport.ts  utils.test.ts  utils.ts
apps/web/src/routes/: Dashboard.tsx  Login.tsx
deploy/: .env.example  Caddyfile  Dockerfile.api  Dockerfile.web  compose.prod.yml  docker-compose.yml  env.example  local.env.example  nginx.conf  vm-deploy.sh
ml/: requirements.txt  train_classifier.py
scripts/: seed_demo_data.py  seed_fake_threads.py
(+3 files in other folders)
