[build-system] 
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-mailbox-api"
version = "0.1.0"
description = "AI Mailbox API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "alembic>=1.13",
  "python-dotenv",
  "httpx>=0.27",
  "pyjwt>=2.8",
  "redis>=5.0",
  "celery>=5.3",
  "tenacity>=8.2",
  "beautifulsoup4",
  "lxml",
  "markdown-it-py",
  "tiktoken",
  "pgvector>=0.2.5",
  "google-genai>=1.9.0",
  "pydantic[email]>=2.0.0",
  # Pulled in transitively by google-genai -> google-auth. Pin to a range that
  # ships prebuilt wheels so pip never falls back to compiling the sdist, which
  # requires a Rust toolchain (maturin) that isn't available locally.
  "cryptography>=42.0,<50",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
# Required only for CLASSIFIER_BACKEND=local (in-process fine-tuned encoder).
# Omit to run with the gemini/heuristic backends and a lean image.
local-classifier = ["torch>=2.2", "transformers>=4.40"]

[tool.uvicorn]
factory = false

[tool.setuptools]
packages = ["app"]
